--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="TitleSetting">設定</string>
 
     <string name="GetLoginBonus">ログインボーナス！はっぴポイント%dptをゲット！</string>
+    <string name="GetLoginBonus2">大祭当日スペシャルログインボーナス！はっぴポイント%dptをゲット！</string>
 
     <string name="GachaMessage1">貯めたポイントではっぴガチャ！目指せコンプリート！</string>
     <string name="GachaMessage2">が当たったよ！</string>
@@ -66,7 +67,7 @@
     <string name="KikakuInfo1_1">千葉大祭であなたのコスプレを披露してみませんか！？1位の方には豪華景品あり！\n\n出場者PR：\n11/3(金) 12:00〜12:30\n＠ストリートパフォーマンス会場\n\n表彰式：\n11/5(日) 14:30〜15:00\n＠ストリートパフォーマンス会場\nエンディング企画内で表彰\n\n詳しい情報は千葉大祭Twitterをチェック！\n※コスプレをしたままの来場・退場はお控えください。</string>
     <string name="KikakuInfoButton1">エントリーフォームへ</string>
     <string name="KikakuInfoButton2">千葉大祭Twitterを見る</string>
-    <string name="KikakuInfo2_1">今年の千葉大祭では部屋・テント企画グランプリを開催します！\nあなたの１票でグランプリが決まります！気に入った企画に投票して、千葉大祭を盛り上げてください！\n\n投票期間：\n11/2(木)〜11/4(土) 9:00〜17:00\n11/5(日) 9:00〜12:00\n\nグランプリの表彰式は、11/5(日)14:30〜ストリートパフォーマンス会場で行われる「大祭エンディング企画」内で行われます。</string>
+    <string name="KikakuInfo2_1">今年の千葉大祭では部屋・テント企画グランプリを開催します！\nあなたの１票でグランプリが決まります！気に入った企画に投票して、千葉大祭を盛り上げてください！\n\n投票期間：\n11/2(木)〜11/4(土) 9:00〜18:00\n11/5(日) 9:00〜12:00\n\nグランプリの表彰式は、11/5(日)14:30〜ストリートパフォーマンス会場で行われる「大祭エンディング企画」内で行われます。</string>
     <string name="KikakuInfoButton3">投票する！</string>
     <string name="KikakuInfo3_1">今年度も、千葉大祭のマスコットキャラクターである「はっぴ」のグッズを作りました！\n千葉大祭当日、セミナー会場前と南門前にて販売します。千葉大祭の記念にぜひどうぞ！</string>
     <string name="KikakuInfo3_2">また、今年度は缶バッジのガチャガチャ機を設置します！\n5種類の缶バッジのうち、どれが当たるかは運次第。トレードするのも楽しいかも？</string>
@@ -76,13 +77,13 @@
     <string name="KikakuInfo4_2">OP・ED</string>
     <string name="KikakuInfo4_3">オープニングでは、各団体が熱いパフォーマンスを繰り広げる団体PRが開催！\n開催日時：11/2(木) 12:15〜12:45\n開催場所：特設ステージ\n\nエンディングでは、ミニゲームやグランプリ・コスプレコンテンスト表彰式が行われます！\n開催日時：11/5(木) 14:30〜15:00\n開催場所：ストリートパフォーマンス会場</string>
     <string name="KikakuInfo4_4">縁日</string>
-    <string name="KikakuInfo4_5">昨年に引き続き今年も縁日を開催！いろんなミニゲームで遊んで豪華景品を当てちゃおう！\n\n開催日時：\n11/2(木)〜11/4(土) 9:00〜17:30\n11/5(日) 9:00〜14:30\n開催場所：\n総合校舎4号館と6号館の間の中庭</string>
+    <string name="KikakuInfo4_5">昨年に引き続き今年も縁日を開催！いろんなミニゲームで遊んで豪華景品を当てちゃおう！\n\n開催日時：\n11/2(木)〜11/4(土) 9:00〜17:00\n11/5(日) 9:00〜14:00\n開催場所：\n総合校舎4号館と6号館の間の中庭</string>
     <string name="KikakuInfo4_6">花火</string>
     <string name="KikakuInfo4_7">今年で3年目の打ち上げ花火！\n今年は55周年を記念して盛大に打ち上げます。間近で花火を見られるチャンス、ぜひ見に来てください！\n※雨天の場合は中止になります。\n\n開催日時：11/4(土) 17:45〜\n開催場所：陸上競技場</string>
     <string name="KikakuInfo4_8">セミナー</string>
     <string name="KikakuInfo4_9">毎年恒例！今年も工作セミナーを行うよ！無料で楽しい工作ができるよ！今年は3種類の中から選べるぞ！是非参加してね！\n\n1. ビー玉万華鏡\n2. ペットボトルビーズ万華鏡\n3. 新聞紙ロケット\n\n開催日時：\n11/2(木) 15:00〜17:00\n11/3・4(金・土) 10:00〜17:00\n11/5(日) 10:00〜15:00\n開催場所：教育学部棟1号館と2号館の間</string>
     <string name="KikakuInfo4_10">ラリー</string>
-    <string name="KikakuInfo4_11">今年のラリーは3種類！\n・全年齢向けのスタンプラリー\n・小学生以下向けのストーリーラリー\n・中高生以上向けの謎解きラリー\n\nラリー本部でラリー用紙を受け取ってスタート！参加賞・特別賞もあるよ！\n\n開催日時：\n11/2(木)〜11/4(土) 9:00〜17:30\n11/5(日) 9:00〜14:30\n受付場所：ラリー本部（総合校舎1号館前）</string>
+    <string name="KikakuInfo4_11">今年のラリーは3種類！\n・全年齢向けのスタンプラリー\n・小学生以下向けのストーリーラリー\n・中高生以上向けの謎解きラリー\n\nラリー本部でラリー用紙を受け取ってスタート！参加賞・特別賞もあるよ！\n\n開催日時：\n11/2(木)〜11/4(土) 9:00〜17:00\n11/5(日) 9:00〜14:00\n受付場所：ラリー本部（総合校舎1号館前）</string>
     <string name="KikakuInfo4_12">はっぴを探せ</string>
     <string name="KikakuInfo4_13">今年度は千葉大祭が55周年！ということで、はっぴを55体隠しちゃいました！\n隠れはっぴの写真に #はっぴを探せ をつけてTwitterでつぶやくと抽選で景品があたるかも？！\n詳しくははっぴのTwitterを見てね！</string>
     <string name="KikakuInfoButton5">はっぴのTwitterを見る</string>
